--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "devDependencies": {
     "tsx": "^3.8.2",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.1"
   }
 }
