--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "API to fetch quotes from the Goodreads website.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx src/index.ts"
   },
   "repository": {
     "type": "git",
